--- a/docs/api/CommonBotLibrary.Extensions.yml
+++ b/docs/api/CommonBotLibrary.Extensions.yml
@@ -7,6 +7,7 @@ items:
   - CommonBotLibrary.Extensions.RedditExtensions
   - CommonBotLibrary.Extensions.RestClientExtensions
   - CommonBotLibrary.Extensions.SteamServiceExtensions
+  - CommonBotLibrary.Extensions.StringExtensions
   langs:
   - csharp
   - vb
@@ -35,3 +36,9 @@ references:
   name: SteamServiceExtensions
   nameWithType: SteamServiceExtensions
   fullName: CommonBotLibrary.Extensions.SteamServiceExtensions
+- uid: CommonBotLibrary.Extensions.StringExtensions
+  commentId: T:CommonBotLibrary.Extensions.StringExtensions
+  isExternal: false
+  name: StringExtensions
+  nameWithType: StringExtensions
+  fullName: CommonBotLibrary.Extensions.StringExtensions
